ICE-10452 moved documentation menu styling from content-template.xhtml to showcase_styles.css, in order to avoid issues with IE8; fixed text alignment in menu items
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@43929 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/ice.samples.showcase/showcase_styles.css
+++ b/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/ice.samples.showcase/showcase_styles.css
@@ -531,3 +531,47 @@ body, table {
 	font-size: .95em;
 	color: #000000;
 }
+
+.ice-ace-menu-bar .ui-widget.ui-widget-content.wijmo-wijmenu.ui-corner-all.ui-helper-clearfix.wijmo-wijmenu-horizontal.documentation-menu .wijmo-wijmenu-link { border-width:0; width: 100%; height: 100%;}
+.documentation-menu .wijmo-wijmenu-item { margin:0; }
+.documentation-menu { padding:0; }
+
+#examplePanel > .ui-panel-titlebar > .ui-panel-title {
+	width:100%;
+}
+
+	/*menu*/
+#examplePanel > .ui-panel-titlebar > .ui-panel-title > div { /* ace:menuBar has detail-less wrapper div */
+	display:inline-block;
+	vertical-align: middle;
+	width:20%;
+	text-align: right;
+	/* IE7 inline-block hack */
+	zoom: 1;
+	*display:inline;
+}
+#examplePanel > .ui-panel-titlebar > .ui-panel-title > div > div {
+	display: inline-block;
+	font-size:10pt;
+	height:24px;
+	/* IE7 inline-block hack */
+	zoom: 1;
+	*display:inline;
+}
+
+#examplePanel .ui-panel-title .ui-menu-multicolumn {
+	text-align: left;
+}
+
+/*title*/
+#examplePanel > .ui-panel-titlebar > .ui-panel-title > span {
+	display:inline-block;
+	vertical-align: middle;
+	width:80%;
+	/* IE7 inline-block hack */
+	zoom: 1;
+	*display:inline;
+}
+#examplePanel_header .ui-panel-titlebar-icons {
+	display:none;
+}
